--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             overflow: hidden;
             margin: 0;
             font-family: sans-serif;
-            background: linear-gradient(135deg, #f5f7fa, #c3cfe2); /* Background Gradient */
+            background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
         }
         .node {
             stroke: #fff;
@@ -40,15 +40,6 @@
             opacity: 0;
             transition: opacity 0.3s;
         }
-        #controls {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            background: rgba(255, 255, 255, 0.9);
-            padding: 10px;
-            border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-        }
         #legend {
             position: absolute;
             top: 100px;
@@ -58,12 +49,28 @@
             border-radius: 5px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
-        #sidePanel {
+        .legend-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 5px;
+        }
+        .legend-color-box {
+            width: 10px;
+            height: 10px;
+            margin-right: 5px;
+        }
+        .legend-info {
+            cursor: help;
+            margin-left: 5px;
+            font-weight: bold;
+            color: #333;
+        }
+        #legendInfoPanel {
             position: absolute;
-            top: 10px;
-            right: 10px;
+            top: 100px;
+            left: 250px;
             width: 300px;
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 255, 255, 0.95);
             padding: 10px;
             border-radius: 5px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
@@ -72,73 +79,44 @@
     </style>
 </head>
 <body>
-    <svg></svg> <!-- Added SVG element -->
-    <div id="controls">
-        <label for="categoryFilter">Filter by Category:</label>
-        <select id="categoryFilter">
-            <option value="all">Show All</option>
-        </select>
-        <div>
-            <label for="nodeSizeToggle">Node Size:</label>
-            <input type="checkbox" id="nodeSizeToggle"> Large Nodes
-        </div>
-    </div>
+    <svg></svg>
 
     <div id="legend">
         <strong>Legend</strong>
         <div id="legendItems"></div>
+        <button id="expandLegend" style="margin-top: 5px; cursor: pointer;">More Info</button>
     </div>
 
-    <div id="sidePanel">
-        <strong>Article Details</strong>
-        <button id="closePanel" style="float: right;">X</button> <!-- Close button -->
-        <div id="articleDetails"></div>
+    <div id="legendInfoPanel">
+        <strong>Category Explanations</strong>
+        <button id="closeLegendPanel" style="float: right;">X</button>
+        <div id="legendDetails"></div>
     </div>
 
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script>
         const jsonURL = "https://raw.githubusercontent.com/Codekarish/CitationsPeerNetwork/master/graph.json";
 
-        // Function to validate year values
-        function isValidYear(year) {
-            const yearNumber = Number(year);
-            return !isNaN(yearNumber) && yearNumber >= 1900 && yearNumber <= new Date().getFullYear();
-        }
+        // Define category explanations
+        const categoryExplanations = {
+            "1": "Highly cited papers that are central to multiple disciplines.",
+            "2": "Niche papers with strong intra-group citations.",
+            "3": "Papers with limited citations, often newer research.",
+            "4": "Older publications that form the foundation of other works."
+        };
 
         function loadGraph() {
-            console.log("Loading graph data...");
             fetch(jsonURL)
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! Status: ${response.status}`);
-                    }
-                    return response.json();
-                })
+                .then(response => response.json())
                 .then(graph => {
-                    console.log("Graph data loaded successfully:", graph);
-
-                    // Validate and clean year values
-                    graph.nodes.forEach(node => {
-                        if (!isValidYear(node.year)) {
-                            console.warn(`Invalid year value for node ${node.label}: ${node.year}`);
-                            node.year = "N/A"; // Set invalid years to "N/A"
-                        }
-                        if (!node.id) {
-                            node.id = `node-${graph.nodes.indexOf(node)}`; // Assign unique ID if missing
-                        }
-                    });
-
                     initializeGraph(graph);
                 })
                 .catch(error => {
                     console.error("Error loading graph data:", error);
-                    alert("Error loading graph data. Please check the console for details.");
                 });
         }
 
         function initializeGraph(graph) {
-            console.log("Initializing graph with data:", graph);
-
             d3.select("svg").remove();
 
             const width = window.innerWidth;
@@ -148,167 +126,87 @@
                 .attr("width", width)
                 .attr("height", height)
                 .call(d3.zoom().scaleExtent([0.5, 5]).on("zoom", function(event) {
-                    g.attr("transform", event.transform); // Zoom and Pan Controls
+                    g.attr("transform", event.transform);
                 }))
                 .append("g");
 
             const g = svg.append("g");
 
-            // Add glow filter for nodes
-            svg.append("defs").append("filter")
-                .attr("id", "glow")
-                .append("feGaussianBlur")
-                .attr("stdDeviation", 3)
-                .attr("result", "coloredBlur");
-
-            // Add gradient for root node
-            svg.append("defs").append("linearGradient")
-                .attr("id", "root-gradient")
-                .attr("x1", "0%").attr("y1", "0%")
-                .attr("x2", "100%").attr("y2", "100%")
-                .selectAll("stop")
-                .data([
-                    { offset: "0%", color: "gold" },
-                    { offset: "100%", color: "orange" }
-                ])
-                .enter().append("stop")
-                .attr("offset", d => d.offset)
-                .attr("stop-color", d => d.color);
-
-            // Adjust forces for better spacing
-            const simulation = d3.forceSimulation(graph.nodes)
-                .force("link", d3.forceLink(graph.links).id(d => d.id).distance(200)) // Increase link distance
-                .force("charge", d3.forceManyBody().strength(-600)) // Stronger repulsion
-                .force("collision", d3.forceCollide().radius(d => 
-                    d.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence..." ? 30 : 15
-                )) // Prevent overlapping
-                .force("center", d3.forceCenter(width / 2, height / 2));
-
-            // Define color scale based on modularity
             const colorScale = d3.scaleOrdinal(d3.schemeCategory10)
-                .domain(graph.nodes.map(d => d.modularity)); // Use modularity for coloring
+                .domain(graph.nodes.map(d => d.modularity));
 
-            // Extract unique categories for filtering
             const categories = [...new Set(graph.nodes.map(d => d.modularity))];
-            const categoryFilter = d3.select("#categoryFilter");
+
+            // Populate the legend dynamically
+            const legendItems = d3.select("#legendItems");
             categories.forEach(category => {
-                categoryFilter.append("option")
-                    .attr("value", category)
-                    .text(`Category ${category}`);
+                let legendEntry = legendItems.append("div")
+                    .attr("class", "legend-item")
+                    .html(`
+                        <div class="legend-color-box" style="background: ${colorScale(category)};"></div>
+                        Category ${category} <span class="legend-info" data-category="${category}">[?]</span>
+                    `);
             });
 
-            // Draw links (edges) as straight lines
+            // Tooltip for category explanations
+            const tooltip = d3.select("body").append("div")
+                .attr("class", "tooltip")
+                .style("opacity", 0);
+
+            d3.selectAll(".legend-info").on("mouseover", function(event) {
+                const category = d3.select(this).attr("data-category");
+                tooltip.style("opacity", 1)
+                    .html(categoryExplanations[category] || "No description available.")
+                    .style("left", (event.pageX + 10) + "px")
+                    .style("top", (event.pageY - 10) + "px");
+            }).on("mouseout", function() {
+                tooltip.style("opacity", 0);
+            });
+
+            // Expandable legend info panel
+            document.getElementById("expandLegend").addEventListener("click", function() {
+                document.getElementById("legendInfoPanel").style.display = "block";
+                document.getElementById("legendDetails").innerHTML = Object.entries(categoryExplanations)
+                    .map(([key, value]) => `<p><strong>Category ${key}:</strong> ${value}</p>`)
+                    .join("");
+            });
+
+            // Close legend panel
+            document.getElementById("closeLegendPanel").addEventListener("click", function() {
+                document.getElementById("legendInfoPanel").style.display = "none";
+            });
+
+            // Force simulation
+            const simulation = d3.forceSimulation(graph.nodes)
+                .force("link", d3.forceLink(graph.links).id(d => d.id).distance(150))
+                .force("charge", d3.forceManyBody().strength(-500))
+                .force("center", d3.forceCenter(width / 2, height / 2));
+
             const link = g.selectAll(".link")
                 .data(graph.links)
                 .enter().append("line")
                 .attr("class", "link")
-                .attr("stroke-dasharray", d => 
-                    (d.source.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence..." || d.target.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence...") ? "5,5" : "none"
-                )
-                .attr("stroke", d => 
-                    (d.source.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence..." || d.target.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence...") ? "red" : "#aaa"
-                );
+                .attr("stroke", "#aaa");
 
-            // Draw nodes with gradients and shapes
-            let isLarge = false; // Default to small nodes
             const node = g.selectAll(".node")
                 .data(graph.nodes)
                 .enter().append("circle")
-                .attr("r", d => d.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence..." ? (isLarge ? 30 : 20) : (isLarge ? 15 : 10)) // Root node is 2x larger
-                .attr("fill", d => d.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence..." ? "url(#root-gradient)" : colorScale(d.modularity)) // Node colors
-                .attr("filter", "url(#glow)") // Node Glow
+                .attr("r", 10)
+                .attr("fill", d => colorScale(d.modularity))
                 .attr("class", "node")
                 .call(d3.drag()
                     .on("start", dragStarted)
                     .on("drag", dragged)
                     .on("end", dragEnded));
 
-            // Hide labels by default, show only on hover
-            const label = g.selectAll(".label")
-                .data(graph.nodes)
-                .enter().append("text")
-                .attr("class", "label")
-                .attr("dx", 12)
-                .attr("dy", ".35em")
-                .text(d => d.label)
-                .style("font-size", "10px")
-                .style("fill", "black")
-                .style("visibility", "hidden");
-
-            // Tooltip for better readability
-            const tooltip = d3.select("body").append("div")
-                .attr("class", "tooltip");
-
-            // Interactive Animations
-            node.on("mouseover", function(event, d) {
-                tooltip.style("opacity", 1)
-                    .html(`<strong>${d.label}</strong><br>Author: ${d.authors || "Unknown"}<br>Year: ${d.year || "N/A"}`)
-                    .style("left", (event.pageX + 10) + "px")
-                    .style("top", (event.pageY - 10) + "px");
-                d3.select(this).transition()
-                    .duration(200)
-                    .attr("r", d => d.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence..." ? (isLarge ? 35 : 25) : (isLarge ? 20 : 15)); // Enlarge node on hover
-                label.filter(label => label.id === d.id)
-                    .style("visibility", "visible"); // Show label on hover
-            }).on("mouseout", function(event, d) {
-                tooltip.style("opacity", 0);
-                d3.select(this).transition()
-                    .duration(200)
-                    .attr("r", d => d.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence..." ? (isLarge ? 30 : 20) : (isLarge ? 15 : 10)); // Reset node size
-                label.filter(label => label.id === d.id)
-                    .style("visibility", "hidden"); // Hide label on mouseout
-            });
-
-            // Filtering by category
-            categoryFilter.on("change", function() {
-                const selectedCategory = this.value;
-                node.style("visibility", d => selectedCategory === "all" || d.modularity == selectedCategory ? "visible" : "hidden");
-                link.style("visibility", d => selectedCategory === "all" || d.source.modularity == selectedCategory || d.target.modularity == selectedCategory ? "visible" : "hidden");
-            });
-
-            // Add legend
-            const legendItems = d3.select("#legendItems");
-            categories.forEach(category => {
-                legendItems.append("div")
-                    .style("display", "flex")
-                    .style("align-items", "center")
-                    .style("margin-bottom", "5px")
-                    .html(`<div style="width: 10px; height: 10px; background: ${colorScale(category)}; margin-right: 5px;"></div>Category ${category}`);
-            });
-
-            // Side panel for article details
-            const sidePanel = d3.select("#sidePanel");
-            const articleDetails = d3.select("#articleDetails");
-
-            node.on("click", function(event, d) {
-                sidePanel.style("display", "block");
-                articleDetails.html(`
-                    <strong>${d.label}</strong><br>
-                    Author: ${d.authors || "Unknown"}<br>
-                    Year: ${d.year || "N/A"}<br>
-                    Abstract: ${d.abstract || "N/A"}
-                `);
-            });
-
-            // Close side panel
-            document.getElementById("closePanel").addEventListener("click", function() {
-                sidePanel.style("display", "none");
-            });
-
             simulation.on("tick", () => {
-                // Update link positions
                 link.attr("x1", d => d.source.x)
                     .attr("y1", d => d.source.y)
                     .attr("x2", d => d.target.x)
                     .attr("y2", d => d.target.y);
 
-                // Update node positions
                 node.attr("cx", d => d.x)
                     .attr("cy", d => d.y);
-
-                // Update label positions
-                label.attr("x", d => d.x)
-                    .attr("y", d => d.y);
             });
 
             function dragStarted(event, d) {
@@ -327,12 +225,6 @@
                 d.fx = null;
                 d.fy = null;
             }
-
-            // Node Size Toggle
-            document.getElementById("nodeSizeToggle").addEventListener("change", function(event) {
-                isLarge = event.target.checked;
-                node.attr("r", d => d.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence..." ? (isLarge ? 30 : 20) : (isLarge ? 15 : 10));
-            });
         }
 
         loadGraph();
