--- a/index.html
+++ b/index.html
@@ -26,6 +26,29 @@
             font-weight: bold;
             fill: black;
         }
+        .tooltip {
+            position: absolute;
+            text-align: center;
+            width: auto;
+            height: auto;
+            padding: 5px;
+            font: 14px sans-serif;
+            background: rgba(0, 0, 0, 0.7);
+            color: #fff;
+            border-radius: 5px;
+            pointer-events: none;
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+        #controls {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background: rgba(255, 255, 255, 0.9);
+            padding: 10px;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+        }
         #legend {
             position: absolute;
             top: 100px;
@@ -51,123 +74,311 @@
             font-weight: bold;
             color: #333;
         }
+        #sidePanel {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            width: 300px;
+            background: rgba(255, 255, 255, 0.9);
+            padding: 10px;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+            display: none;
+        }
     </style>
 </head>
 <body>
-    <svg id="network-svg" width="100%" height="100%"></svg>
+    <svg></svg> <!-- Added SVG element -->
+    <div id="controls">
+        <label for="categoryFilter">Filter by Category:</label>
+        <select id="categoryFilter">
+            <option value="all">Show All</option>
+        </select>
+        <div>
+            <label for="nodeSizeToggle">Node Size:</label>
+            <input type="checkbox" id="nodeSizeToggle"> Large Nodes
+        </div>
+    </div>
 
     <div id="legend">
         <strong>Legend</strong>
         <div id="legendItems"></div>
     </div>
 
+    <div id="sidePanel">
+        <strong>Article Details</strong>
+        <button id="closePanel" style="float: right;">X</button> <!-- Close button -->
+        <div id="articleDetails"></div>
+    </div>
+
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script>
         const jsonURL = "https://raw.githubusercontent.com/Codekarish/CitationsPeerNetwork/master/graph.json";
 
+        // Define category explanations based on depth=3 approach
+        const categoryExplanations = {
+            "0": "Directly connected papers with considerable citations.",
+            "1": "Directly connected papers with significant citations and interdisciplinary impact.",
+            "2": "Niche papers with highly focused intra-group citations.",
+            "3": "Recent works with growing citations, mostly cited by the first two categories.",
+            "4": "Foundational papers forming the basis of the most cited works.",
+            "5": "Derived from depth-2 citations of category 3 papers, indicating early-stage influence.",
+            "6": "Papers cited mainly by category 5, often representing emerging subfields.",
+            "7": "Specialized research with citations primarily limited to niche areas.",
+            "8": "Papers appearing at depth-3, representing the outermost layer of influence."
+        };
+
+        // Function to validate year values
+        function isValidYear(year) {
+            const yearNumber = Number(year);
+            return !isNaN(yearNumber) && yearNumber >= 1900 && yearNumber <= new Date().getFullYear();
+        }
+
         function loadGraph() {
+            console.log("Loading graph data...");
             fetch(jsonURL)
-                .then(response => response.json())
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error(`HTTP error! Status: ${response.status}`);
+                    }
+                    return response.json();
+                })
                 .then(graph => {
+                    console.log("Graph data loaded successfully:", graph);
+
+                    // Validate and clean year values
+                    graph.nodes.forEach(node => {
+                        if (!isValidYear(node.year)) {
+                            console.warn(`Invalid year value for node ${node.label}: ${node.year}`);
+                            node.year = "N/A"; // Set invalid years to "N/A"
+                        }
+                        if (!node.id) {
+                            node.id = `node-${graph.nodes.indexOf(node)}`; // Assign unique ID if missing
+                        }
+                    });
+
                     initializeGraph(graph);
                 })
                 .catch(error => {
                     console.error("Error loading graph data:", error);
+                    alert("Error loading graph data. Please check the console for details.");
                 });
         }
 
         function initializeGraph(graph) {
+            console.log("Initializing graph with data:", graph);
+
+            d3.select("svg").remove();
+
             const width = window.innerWidth;
             const height = window.innerHeight;
 
-            // Ensure SVG is properly initialized
-            const svg = d3.select("#network-svg");
-            svg.selectAll("*").remove(); // Remove previous graph
+            const svg = d3.select("body").append("svg")
+                .attr("width", width)
+                .attr("height", height)
+                .call(d3.zoom().scaleExtent([0.5, 5]).on("zoom", function(event) {
+                    g.attr("transform", event.transform); // Zoom and Pan Controls
+                }))
+                .append("g");
 
             const g = svg.append("g");
 
-            svg.call(d3.zoom()
-                .scaleExtent([0.5, 5])
-                .on("zoom", function(event) {
-                    g.attr("transform", event.transform);
-                })
-            );
+            // Add glow filter for nodes
+            svg.append("defs").append("filter")
+                .attr("id", "glow")
+                .append("feGaussianBlur")
+                .attr("stdDeviation", 3)
+                .attr("result", "coloredBlur");
 
-            const colorScale = d3.scaleOrdinal(d3.schemeCategory10)
-                .domain(graph.nodes.map(d => d.modularity || "Unknown"));
+            // Add gradient for root node
+            svg.append("defs").append("linearGradient")
+                .attr("id", "root-gradient")
+                .attr("x1", "0%").attr("y1", "0%")
+                .attr("x2", "100%").attr("y2", "100%")
+                .selectAll("stop")
+                .data([
+                    { offset: "0%", color: "gold" },
+                    { offset: "100%", color: "orange" }
+                ])
+                .enter().append("stop")
+                .attr("offset", d => d.offset)
+                .attr("stop-color", d => d.color);
 
-            // Ensure nodes have positions
-            graph.nodes.forEach(node => {
-                if (!node.x || !node.y) {
-                    node.x = width / 2 + Math.random() * 200 - 100;
-                    node.y = height / 2 + Math.random() * 200 - 100;
-                }
-            });
-
-            // Force simulation
+            // Adjust forces for better spacing
             const simulation = d3.forceSimulation(graph.nodes)
-                .force("link", d3.forceLink(graph.links).id(d => d.id).distance(150))
-                .force("charge", d3.forceManyBody().strength(-500))
+                .force("link", d3.forceLink(graph.links).id(d => d.id).distance(200)) // Increase link distance
+                .force("charge", d3.forceManyBody().strength(-600)) // Stronger repulsion
+                .force("collision", d3.forceCollide().radius(d => 
+                    d.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence..." ? 30 : 15
+                )) // Prevent overlapping
                 .force("center", d3.forceCenter(width / 2, height / 2));
 
-            // Draw links (edges)
+            // Define color scale based on modularity
+            const colorScale = d3.scaleOrdinal(d3.schemeCategory10)
+                .domain(graph.nodes.map(d => d.modularity)); // Use modularity for coloring
+
+            // Extract unique categories for filtering
+            const categories = [...new Set(graph.nodes.map(d => d.modularity))];
+            const categoryFilter = d3.select("#categoryFilter");
+            categories.forEach(category => {
+                categoryFilter.append("option")
+                    .attr("value", category)
+                    .text(`Category ${category}`);
+            });
+
+            // Draw links (edges) as straight lines
             const link = g.selectAll(".link")
                 .data(graph.links)
                 .enter().append("line")
                 .attr("class", "link")
-                .attr("stroke", "#aaa");
+                .attr("stroke-dasharray", d => 
+                    (d.source.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence..." || d.target.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence...") ? "5,5" : "none"
+                )
+                .attr("stroke", d => 
+                    (d.source.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence..." || d.target.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence...") ? "red" : "#aaa"
+                );
 
-            // Draw nodes
+            // Draw nodes with gradients and shapes
+            let isLarge = false; // Default to small nodes
             const node = g.selectAll(".node")
                 .data(graph.nodes)
                 .enter().append("circle")
-                .attr("r", d => d.label === "Root Paper" ? 20 : 10) // Root node 2x bigger
-                .attr("fill", d => colorScale(d.modularity || "Unknown"))
+                .attr("r", d => d.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence..." ? (isLarge ? 30 : 20) : (isLarge ? 15 : 10)) // Root node is 2x larger
+                .attr("fill", d => d.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence..." ? "url(#root-gradient)" : colorScale(d.modularity)) // Node colors
+                .attr("filter", "url(#glow)") // Node Glow
                 .attr("class", "node")
                 .call(d3.drag()
                     .on("start", dragStarted)
                     .on("drag", dragged)
                     .on("end", dragEnded));
 
-            // Simulation updates
+            // Hide labels by default, show only on hover
+            const label = g.selectAll(".label")
+                .data(graph.nodes)
+                .enter().append("text")
+                .attr("class", "label")
+                .attr("dx", 12)
+                .attr("dy", ".35em")
+                .text(d => d.label)
+                .style("font-size", "10px")
+                .style("fill", "black")
+                .style("visibility", "hidden");
+
+            // Tooltip for better readability
+            const tooltip = d3.select("body").append("div")
+                .attr("class", "tooltip");
+
+            // Interactive Animations
+            node.on("mouseover", function(event, d) {
+                tooltip.style("opacity", 1)
+                    .html(`<strong>${d.label}</strong><br>Author: ${d.authors || "Unknown"}<br>Year: ${d.year || "N/A"}`)
+                    .style("left", (event.pageX + 10) + "px")
+                    .style("top", (event.pageY - 10) + "px");
+                d3.select(this).transition()
+                    .duration(200)
+                    .attr("r", d => d.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence..." ? (isLarge ? 35 : 25) : (isLarge ? 20 : 15)); // Enlarge node on hover
+                label.filter(label => label.id === d.id)
+                    .style("visibility", "visible"); // Show label on hover
+            }).on("mouseout", function(event, d) {
+                tooltip.style("opacity", 0);
+                d3.select(this).transition()
+                    .duration(200)
+                    .attr("r", d => d.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence..." ? (isLarge ? 30 : 20) : (isLarge ? 15 : 10)); // Reset node size
+                label.filter(label => label.id === d.id)
+                    .style("visibility", "hidden"); // Hide label on mouseout
+            });
+
+            // Filtering by category
+            categoryFilter.on("change", function() {
+                const selectedCategory = this.value;
+                node.style("visibility", d => selectedCategory === "all" || d.modularity == selectedCategory ? "visible" : "hidden");
+                link.style("visibility", d => selectedCategory === "all" || d.source.modularity == selectedCategory || d.target.modularity == selectedCategory ? "visible" : "hidden");
+            });
+
+            // Add legend with ? icons
+            const legendItems = d3.select("#legendItems").html("");
+            categories.forEach(category => {
+                const legendItem = legendItems.append("div")
+                    .attr("class", "legend-item");
+
+                legendItem.append("div")
+                    .attr("class", "legend-color-box")
+                    .style("background", colorScale(category));
+
+                legendItem.append("span")
+                    .text(`Category ${category}`);
+
+                // Add ? icon for category explanation
+                legendItem.append("span")
+                    .attr("class", "legend-info")
+                    .text("?")
+                    .on("click", function() {
+                        const explanation = categoryExplanations[category] || "No explanation available.";
+                        d3.select("#sidePanel").style("display", "block");
+                        d3.select("#articleDetails").html(`
+                            <strong>Category ${category}</strong><br>
+                            ${explanation}
+                        `);
+                    });
+            });
+
+            // Side panel for article details
+            const sidePanel = d3.select("#sidePanel");
+            const articleDetails = d3.select("#articleDetails");
+
+            node.on("click", function(event, d) {
+                sidePanel.style("display", "block");
+                articleDetails.html(`
+                    <strong>${d.label}</strong><br>
+                    Author: ${d.authors || "Unknown"}<br>
+                    Year: ${d.year || "N/A"}<br>
+                    Abstract: ${d.abstract || "N/A"}
+                `);
+            });
+
+            // Close side panel
+            document.getElementById("closePanel").addEventListener("click", function() {
+                sidePanel.style("display", "none");
+            });
+
             simulation.on("tick", () => {
+                // Update link positions
                 link.attr("x1", d => d.source.x)
                     .attr("y1", d => d.source.y)
                     .attr("x2", d => d.target.x)
                     .attr("y2", d => d.target.y);
 
+                // Update node positions
                 node.attr("cx", d => d.x)
                     .attr("cy", d => d.y);
+
+                // Update label positions
+                label.attr("x", d => d.x)
+                    .attr("y", d => d.y);
             });
 
-            // Update legend dynamically
-            const legendItems = d3.select("#legendItems").html("");
-            const categories = [...new Set(graph.nodes.map(d => d.modularity || "Unknown"))];
-            categories.forEach(category => {
-                legendItems.append("div")
-                    .attr("class", "legend-item")
-                    .html(`
-                        <div class="legend-color-box" style="background: ${colorScale(category)};"></div>
-                        Category ${category}
-                    `);
+            function dragStarted(event, d) {
+                if (!event.active) simulation.alphaTarget(0.3).restart();
+                d.fx = d.x;
+                d.fy = d.y;
+            }
+
+            function dragged(event, d) {
+                d.fx = event.x;
+                d.fy = event.y;
+            }
+
+            function dragEnded(event, d) {
+                if (!event.active) simulation.alphaTarget(0);
+                d.fx = null;
+                d.fy = null;
+            }
+
+            // Node Size Toggle
+            document.getElementById("nodeSizeToggle").addEventListener("change", function(event) {
+                isLarge = event.target.checked;
+                node.attr("r", d => d.label === "Understanding cybersecurity capacity building and its relationship to norms and confidence..." ? (isLarge ? 30 : 20) : (isLarge ? 15 : 10));
             });
-        }
-
-        function dragStarted(event, d) {
-            if (!event.active) d3.forceSimulation().alphaTarget(0.3).restart();
-            d.fx = d.x;
-            d.fy = d.y;
-        }
-
-        function dragged(event, d) {
-            d.fx = event.x;
-            d.fy = event.y;
-        }
-
-        function dragEnded(event, d) {
-            if (!event.active) d3.forceSimulation().alphaTarget(0);
-            d.fx = null;
-            d.fy = null;
         }
 
         loadGraph();
